# numerical_analysis

./: conjugate_gradient.py  differentiation.py  eigenvalue.py  equation.py  equation_system.py  integration.py  interpolation.py  iterative_method.py  polynomial.py  pyproject.toml  setup.py  spline.py
cyy_numerical_analysis/: b_spline.py  b_spline_interpolation.py  conjugate_gradient.py  differentiation.py  discrete_fourier_transform_fit.py  eigenvalue.py  equation.py  equation_system.py  integration.py  interpolation.py  iterative_method.py  polynomial.py  spline.py  steepest_descent.py
cyy_numerical_analysis/test/: test_b_spline.py  test_conjugate_gradient.py  test_differentiation.py  test_eigenvalue.py  test_equation.py  test_equation_system.py  test_integration.py  test_interpolation.py  test_spline.py
test/: test_conjugate_gradient.py  test_differentiation.py  test_eigenvalue.py  test_equation.py  test_equation_system.py  test_integration.py  test_interpolation.py  test_polynomial.py  test_spline.py
