[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cyy_numerical_analysis"
version = "0.1"
requires-python = ">=3.12"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
  {name = "cyy", email = "cyyever@outlook.com"},
]
license = {text = "BSD License"}
classifiers = [
  "Programming Language :: Python"
]

dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[project.urls]
Repository = "https://github.com/cyyever/torch_XAI"

[tool.pyright]
include = ["cyy_torch_xai"]
defineConstant = { DEBUG = true }

reportMissingImports = true
reportMissingTypeStubs = false

[tool.ruff]
target-version = "py312"
src = ["cyy_torch_xai"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
